--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.23)
-project(LAXER)
+project(Compiler)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(LAXER main.cpp FA.cpp FA.h)
+add_executable(Compiler main.cpp FA.cpp FA.h)
